# CraftWorld

./: .gitignore  CMakeLists.txt  main.cpp
Camera/: Camera.cpp  Camera.h
GLDebug/: GLDebug.cpp  GLDebug.h
Generation/: AdjacentChunkBlockPositions.h  AdjacentChunkPositions.h
Generation/Block/: ChunkBlockData.cpp  ChunkBlockData.h
Generation/ChunkGenerator/: ChunkGenerator.cpp  ChunkGenerator.h
Generation/ChunkMeshGenerator/: ChunkMeshGenerator.cpp  ChunkMeshGenerator.h
Mesh/BlockMesh/: BlockMesh.cpp  BlockMesh.h
Mesh/ChunkMesh/: ChunkMesh.cpp  ChunkMesh.h
Model/Block/: Block.cpp  Block.h
Model/Chunk/: Chunk.cpp  Chunk.h
Model/Chunk/Chunk/: Chunk.cpp  Chunk.h
Model/Chunk/ChunkBlockLayer/: IChunkBlockLayer.h  SingleBlockChunkBlockLayer.h
Model/Chunk/ChunkBlockLayer/ChunkBlockLayer/: ChunkBlockLayer.cpp  ChunkBlockLayer.h
Model/Chunk/IChunk/: IChunk.cpp  IChunk.h
Model/Chunk/SingleBlockTypeChunk/: SingleBlockTypeChunk.cpp  SingleBlockTypeChunk.h
Model/ChunkBlock/: ChunkBlock.cpp  ChunkBlock.h
Player/: Player.cpp  Player.h
Renderer/IndexBuffer/: IndexBuffer.cpp  IndexBuffer.h
Renderer/Shader/: Shader.cpp  Shader.h
Renderer/Texture/: TextureAtlas.cpp  TextureAtlas.h
Renderer/VertexArray/: VertexArray.cpp  VertexArray.h
Renderer/VertexBuffer/: VertexBuffer.cpp  VertexBuffer.h
Renderer/VertexBufferLayout/: VertexBufferLayout.h
Util/: DeltaTime.cpp
Util/DeltaTime/: DeltaTime.h
World/: World.cpp  World.h
notes/: Notes.txt
res/: 24cube.txt
res/shaders/: basic.frag  basic.vert
